--- a/frontend/sass/layout/_navigation.scss
+++ b/frontend/sass/layout/_navigation.scss
@@ -238,6 +238,7 @@
 			background-color: var(--color-primary-3);
 		}
 		&:not(.navbar__dropdown-container):hover {
+			z-index: 10000;
 			transform: translateY(-$navbar__item-divider-width);
 			box-shadow: 0 $default-font-size * 0.5 $default-font-size * 2 -$default-font-size * .5
 				$navbar-box-shadow-color;
@@ -546,7 +547,7 @@
 		margin: 0 auto;
 
 		@include respond(nav-switch) {
-			width: 100%;
+			width: 98.6%;
 		}
 	}
 
@@ -606,21 +607,15 @@
 	top: $page-nav-top;
 	left: 0;
 	width: calc((100% - #{$resume-card-width-full}) / 2);
-
-	// top: calc(((100vw - (#{$resume-card-width-full} + ((100vw - #{$resume-card-width-full}) / 2) + 8rem)) / 2) + 7rem);
-	// left: calc(((100% - #{$resume-card-width-full}) / 4) - 2rem);
-	// width: calc(((100% - #{$resume-card-width-full}) / 4) + 2rem);
-
 	font-size: 1vw;
 	display: grid;
 	justify-items: center;
 	align-items: center;
-	// grid-auto-rows: minmax(min-content, 1fr);
 	grid-auto-rows: 1fr;
 	height: 200%;
 
 	@include respond(nav-switch) {
-		// display: grid;
+		z-index: 0;
 		font-size: $default-font-size * 0.85;
 		position: static;
 		width: calc(95% - 16rem);
@@ -656,6 +651,7 @@
 
 		&-group {
 			// width: 100%;
+			padding: $default-font-size * .25 0;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -668,8 +664,16 @@
 ;
 
 			&:nth-of-type(1) {
+				padding-top: 0;
 				@include respond(nav-switch) {
 					margin-left: 0;
+					padding-top: $default-font-size * .25 * 2;
+				}
+			}
+
+			&:last-of-type {
+				@include respond(nav-switch) {
+					padding-bottom: $default-font-size * .25 * 2;
 				}
 			}
 
