--- a/frontend/sass/pages/_resume.scss
+++ b/frontend/sass/pages/_resume.scss
@@ -22,7 +22,7 @@
 
 	&__section {
 		// background-image: linear-gradient(to left, var(--color-primary-1), var(--color-primary-2));
-		width: 100vw;
+		width: 100%;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -31,6 +31,10 @@
 		// border-radius: $default-font-size;
 
 		// grid-row-gap: $default-font-size * 2;
+		@include respond(nav-switch) {
+			width: 100vw;
+		}
+		
 
 		&-summary {
 			grid-column: 1 / -1;
